--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,10 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.7
 
 # Mod Properties
+modid=biomesplusplus
 mod_version=0.1.0
 maven_group=bluestar.biomesplusplus
-archives_base_name=biomesplusplus
+archives_base_name=biomesplusplus-fabric
 
 # Dependencies
 fabric_version=0.96.11+1.20.4
